feat: create product domain and order item relation with order
