# internal/infra/postgres/models/product.go
@@ -1,0 +1,8 @@
+package models
+
+type Product struct {
+    BaseModel
+    Name  string
+    Price Price
+    Stock uint8
+}
